--- a/app/views/urls/_form.html.erb
+++ b/app/views/urls/_form.html.erb
@@ -2,7 +2,7 @@
   <%= f.error_notification %>
 
   <div class="inputs">
-    <%= f.input :shorturl %>
+    <%= f.input :longurl %>
   </div>
 
   <div class="actions">
